moved getDLSFileData() to external module for reuse

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -40,57 +40,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from '2020-07-31 DLS concentration vs. count rate'\n",
+    "# derived from '2020-07-31 DLS concentration vs. count rate'\n",
     "import os\n",
-    "from dateutil.parser import parse\n",
     "from pathlib import Path\n",
     "import pandas as pd\n",
-    "from analyse_dls_with_contin.dlshelpers import getDLSFileMeta\n",
-    "\n",
-    "def getDLSFileData(filename, showProgress=False):\n",
-    "    if showProgress:\n",
-    "        print('.', end=\"\") # some progress output\n",
-    "    data = dict(filename=os.path.basename(filename))\n",
-    "    header = getDLSFileMeta(filename)\n",
-    "    data.update(timestamp=parse(header['Date']+' '+header['Time']))\n",
-    "    #print(header)\n",
-    "    memostr = \"\".join([value for key,value in header.items() if key.startswith(\"SampMemo\")])\n",
-    "    # try to get the concentration from the memo field\n",
-    "    #print(\"memostr\", memostr)\n",
-    "    memofields = [field.strip(' ,;') for field in memostr.split()]\n",
-    "    #print(\"memofields\", memofields)\n",
-    "    try:\n",
-    "        concentration = [float(field.split(':')[1]) for field in memofields if ':' in field][0]\n",
-    "        concentration = 1/float(concentration)\n",
-    "    except (IndexError, ValueError):\n",
-    "        concentration = 1\n",
-    "    data.update(concentration=concentration)\n",
-    "    angles = [value for key,value in header.items() if key.startswith(\"Angle\")]\n",
-    "    data.update(angles=angles)\n",
-    "    for name in \"Temperature\", \"Viscosity\", \"Refractive Index\", \"Wavelength\":\n",
-    "        for key,value in header.items():\n",
-    "            if key.startswith(name):\n",
-    "                data[key] = value\n",
-    "    with open(filename, encoding='cp1250') as fd:\n",
-    "        lines = fd.readlines()\n",
-    "        #[print(ln.strip()) for ln in lines[17:25]]\n",
-    "        value = [line for line in lines if line.startswith('Monitor Diode')]\n",
-    "        value = float(value[0].split()[-1])\n",
-    "        data.update(monitorDiode=value)\n",
-    "        #print(\"data\", data)\n",
-    "        crstart = int([idx for idx, ln in enumerate(lines) if 'Count Rate' in ln][0])+1\n",
-    "        crend   = int([idx for idx, ln in enumerate(lines) if 'Monitor Diode' in ln][0])-1\n",
-    "    # read tabular data after file was closed by leaving scope of 'with'\n",
-    "    cr = pd.read_csv(filename, skiprows=crstart, nrows=crend-crstart, sep=r'\\s+', names=angles)\n",
-    "    data.update(countrate=cr)\n",
-    "    return data\n",
-    "\n",
-    "def dfSortByColumn(df, colname):\n",
-    "    # sort the DataFrame by the given column via index\n",
-    "    df.set_index(colname, inplace=True)\n",
-    "    df.sort_index(inplace=True)\n",
-    "    # resetting the index to the default one (just numbered)\n",
-    "    df.reset_index(inplace=True)\n",
+    "from analyse_dls_with_contin.dlshelpers import getDLSFileData\n",
     "    \n",
     "def processDLSMeasurements(files, monitorDiodeRef=0):\n",
     "    \"\"\"Treat a set of files as measurement of the same sample,\n",
@@ -155,7 +109,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analyse_dls_with_contin.jupyter_analysis_tools.datalocations import getDataDirs, getDataFiles"
+    "from analyse_dls_with_contin.jupyter_analysis_tools.datalocations import getDataDirs, getDataFiles, printFileList"
    ]
   },
   {
@@ -167,7 +121,7 @@
    "source": [
     "import numpy as np\n",
     "tolueneFiles = getDataFiles(pathToluene, include=\"*.ASC\", exclude=\"_average\")\n",
-    "[print(fn) for fn in tolueneFiles]\n",
+    "printFileList(tolueneFiles)\n",
     "tolueneData = processDLSMeasurements(tolueneFiles)\n",
     "crTol_mean = crMean(tolueneData)\n",
     "tolueneData, crTol_mean"
@@ -181,7 +135,7 @@
    "outputs": [],
    "source": [
     "bufferFiles = getDataFiles(pathBuffer, include=\"*.ASC\", exclude=\"_average\")\n",
-    "[print(fn) for fn in bufferFiles]\n",
+    "printFileList(bufferFiles)\n",
     "bufferData = processDLSMeasurements(bufferFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "crBuf_mean = crMean(bufferData)\n",
     "bufferData, crBuf_mean"
@@ -195,7 +149,7 @@
    "outputs": [],
    "source": [
     "particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
-    "[print(fn) for fn in particleFiles]\n",
+    "printFileList(particleFiles)\n",
     "particleData = processDLSMeasurements(particleFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "crTot_mean = crMean(particleData)\n",
     "particleData, crTot_mean"
@@ -227,11 +181,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections.abc import Sequence\n",
     "import miepython\n",
+    "from analyse_dls_with_contin.jupyter_analysis_tools.utils import isList\n",
     "def diffScatteringCrossSection(radius, angles, wavelen, nMedium, verbose=False):\n",
     "    geometric_cross_section = np.pi * radius**2 * 1e-14 # cm**2\n",
-    "    if not isinstance(angles, (Sequence, np.ndarray)):\n",
+    "    if not isList(angles):\n",
     "        angles = np.array([angles])\n",
     "    mu = np.cos(np.radians(angles))\n",
     "    m, x = refracParticle/nMedium, np.pi*2*radius/(wavelen/nMedium)\n",
@@ -248,6 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Example for testing\n",
     "import numpy as np\n",
     "radius = 850.\n",
     "wavelen = bufferData[\"Wavelength [nm]\"]\n",
@@ -264,6 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# plotting Mie scattering and count rates over the angles\n",
     "import matplotlib.pyplot as plt\n",
     "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
     "createFigure(300, 2.2, quiet=True, tight_layout = {'pad': 0.05});\n",
@@ -314,7 +270,7 @@
    "id": "febeb3ba-98e3-47cf-9f84-9057612f45ba",
    "metadata": {},
    "source": [
-    "## Run CONTIN"
+    "### Run CONTIN"
    ]
   },
   {
@@ -339,16 +295,6 @@
    "outputs": [],
    "source": [
     "getAngles(particleData)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe66908f-6a04-46cf-b552-eee2916f648d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import analyse_dls_with_contin.contin"
    ]
   },
   {
@@ -404,7 +350,7 @@
     "        plt.xlim(0,1e-7)\n",
     "        plt.subplot(2,2,2); plt.grid()\n",
     "        plt.plot(dfDistrib.radius.values, sigma_sca, label=\"Diff. scattering cross section (cm$^2$/sr)\")\n",
-    "        plt.legend()\n",
+    "        plt.xlim(0,1e-7); plt.ylim(0, 1e-12); plt.legend()\n",
     "        plt.subplot(2,1,2); plt.grid()\n",
     "        plt.plot(dfDistrib.radius.values, concentrationDistrib,\n",
     "                 label=r\"concentration in $sr/cm^3$(?)=$\\int${:.3g}\".format(concentration));\n",
