--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -280,11 +280,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "sizeRangeM = (1e-9, 200e-9)\n",
     "continConfig = dict(\n",
     "    angle=90,\n",
-    "    ptRangeSec=(3e-7, 1e0), fitRangeM=(1e-9, 500e-9), gridpts=500,\n",
+    "    ptRangeSec=(3e-7, 1e0), fitRangeM=sizeRangeM, gridpts=200,\n",
     "    transformData=True, freeBaseline=True, weighResiduals=False,\n",
-    ")"
+    ")\n",
+    "import copy\n",
+    "def updatedDict(d, key, value):\n",
+    "    dd = copy.copy(d)\n",
+    "    dd[key] = value\n",
+    "    return dd"
    ]
   },
   {
@@ -294,7 +300,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "getAngles(particleData)"
+    "angles = getAngles(particleData)\n",
+    "continConfigs = [updatedDict(continConfig, 'angle', angle) for angle in getAngles(particleData)]\n",
+    "continConfigs"
    ]
   },
   {
@@ -304,8 +312,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analyse_dls_with_contin.contin import processFiles, getContinResults\n",
-    "resultDirs = processFiles(particleFiles, continConfig, nthreads=None)\n",
+    "from analyse_dls_with_contin.contin import runContinOverFiles, getContinResults\n",
+    "resultDirs = runContinOverFiles(particleFiles, continConfigs, nthreads=None)\n",
     "resultDirs"
    ]
   },
@@ -321,13 +329,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5f226443-3e93-4252-a42c-927b27eb25be",
+   "id": "9318f88b-1f20-459b-bd6f-b98dddf94f02",
    "metadata": {},
    "outputs": [],
    "source": [
     "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import area, integrate\n",
     "rayleighRatio = 1.35e-5 # in 1/cm at wavelength of 632.8 nm and 25 °C\n",
-    "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plot=False):\n",
+    "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
     "    theta = varmap['angle']\n",
@@ -347,25 +355,45 @@
     "        plt.errorbar(dfDistrib.radius,\n",
     "                 dfDistrib.distrib * intensity, yerr=dfDistrib.err*intensity, ecolor='salmon')\n",
     "        plt.title(continResultDir.name)\n",
-    "        plt.xlim(0,1e-7)\n",
+    "        plt.xlim(plotRangeX)\n",
     "        plt.subplot(2,2,2); plt.grid()\n",
     "        plt.plot(dfDistrib.radius.values, sigma_sca, label=\"Diff. scattering cross section (cm$^2$/sr)\")\n",
-    "        plt.xlim(0,1e-7); plt.ylim(0, 1e-12); plt.legend()\n",
+    "        plt.xlim(plotRangeX); plt.ylim(0, 1e-11); plt.legend()\n",
     "        plt.subplot(2,1,2); plt.grid()\n",
     "        plt.plot(dfDistrib.radius.values, concentrationDistrib,\n",
     "                 label=r\"concentration in $sr/cm^3$(?)=$\\int${:.3g}\".format(concentration));\n",
-    "        plt.legend(); plt.xlim(0,1e-7);\n",
-    "    return concentration\n",
+    "        plt.legend(); plt.xlim(plotRangeX);\n",
+    "    return concentration, theta\n",
     "\n",
-    "concentrations = np.array([getConcentration(dn, particleData, bufferData, tolueneData, plot=True)\n",
-    "                           for dn in resultDirs])\n",
+    "concentrations = np.array([getConcentration(dn, particleData, bufferData, tolueneData, plotRangeX=sizeRangeM, plot=True)\n",
+    "                           for dn in resultDirs])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8914d5da-380f-4de5-9918-d0e29d49a72f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.05});\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.plot(concentrations[:,1], concentrations[:,0], '.')\n",
+    "plt.grid(); plt.ylim(0,30e2)\n",
+    "plt.ylabel(r\"Concentration in $1/cm^3$(?)\")\n",
+    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.plot(concentrations[:,1], concentrations[:,0], '.')\n",
+    "plt.grid(); plt.ylim(0,10e2)\n",
+    "plt.ylabel(r\"Concentration in $1/cm^3$(?)\")\n",
+    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "concentrations.mean(), concentrations.std()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fed8260d-2385-4f80-9076-b93776ce80ad",
+   "id": "5d9a92c3-3ab2-4114-b504-deaecf8bfcb3",
    "metadata": {},
    "outputs": [],
    "source": []
