minor fixes for handling averaged files without recorded count rate

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -60,24 +60,27 @@
     "    # create a DataFrame from that\n",
     "    df = pd.DataFrame({key: [fileData[key] for fileData in dirData]\n",
     "                       for key in dirData[0].keys() if key not in (\"countrate\", \"angles\")})\n",
-    "    monitorDiodeScale = monitorDiodeRef / df.monitorDiode.mean() if monitorDiodeRef != 0 else 1\n",
     "    name = '+'.join(list(set([Path(fn).parent.name for fn in files])))\n",
     "    summary = dict(name=name, timestamp=df.timestamp[0],\n",
-    "                   monitorDiode=df.monitorDiode.mean(),\n",
-    "                   monitorDiodeScale=monitorDiodeScale,\n",
     "                   concentration=df.concentration[0])\n",
+    "    monitorDiodeScale = 1\n",
+    "    if \"monitorDiode\" in df.columns:\n",
+    "        if monitorDiodeRef != 0:\n",
+    "            monitorDiodeScale = monitorDiodeRef / df.monitorDiode.mean()\n",
+    "        summary.update(dict(monitorDiode=df.monitorDiode.mean()))\n",
+    "        print(\"Monitor diode reference: {:.0f}, this mon. diode: {:7.0f}, scale: {:.6f} ({})\"\n",
+    "              .format(monitorDiodeRef, summary['monitorDiode'], monitorDiodeScale, summary['name']))\n",
+    "    summary.update(dict(monitorDiodeScale=monitorDiodeScale))\n",
     "    for name in (\"Temperature\", \"Viscosity\", \"Refractive Index\", \"Wavelength\"):\n",
     "        for colname in df.columns:\n",
     "           if colname.startswith(name):\n",
     "               summary[colname] = df[colname].mean()\n",
-    "    print(\"Monitor diode reference: {:.0f}, this mon. diode: {:7.0f}, scale: {:.6f} ({})\"\n",
-    "          .format(monitorDiodeRef, summary['monitorDiode'], monitorDiodeScale, summary['name']))\n",
     "    # all sets of angles found in files in this directory, a set can have unique entries only\n",
     "    dirAngles = set([tuple(fileData['angles']) for fileData in dirData])\n",
     "    countRates = []\n",
     "    for angles in dirAngles:\n",
     "        # concatenate countrates (time series) of the same angles only (for averaging over time later)\n",
-    "        countRates.append(pd.concat([fileData['countrate']\n",
+    "        countRates.append(pd.concat([fileData.get(\"countrate\", pd.DataFrame())\n",
     "                                     for fileData in dirData\n",
     "                                     if tuple(fileData['angles']) == angles]))\n",
     "    # count rate mean over all measurements (must be at same angles!)\n",
@@ -148,7 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
+    "particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")#, exclude=\"_average\")\n",
     "printFileList(particleFiles)\n",
     "particleData = processDLSMeasurements(particleFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "crTot_mean = crMean(particleData)\n",
