note added for installing miepython module and further improvements

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -180,6 +180,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "67202c86-937b-464e-986f-ca04c6ecb6dd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!pip install miepython # install miepython module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "760c5e8b-8d54-40ec-9f48-88fc7615f369",
    "metadata": {},
    "outputs": [],
@@ -382,24 +392,25 @@
     "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.05});\n",
     "plt.subplot(1,2,1)\n",
     "plt.plot(concentrations[:,1], concentrations[:,0], '.')\n",
-    "plt.grid(); plt.ylim(0,30e2)\n",
+    "plt.grid(); #plt.ylim(0,30e2)\n",
     "plt.ylabel(r\"Concentration in $1/cm^3$(?)\")\n",
     "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "plt.subplot(1,2,2)\n",
     "plt.plot(concentrations[:,1], concentrations[:,0], '.')\n",
-    "plt.grid(); plt.ylim(0,10e2)\n",
+    "plt.grid(); plt.ylim(0,1000)\n",
     "plt.ylabel(r\"Concentration in $1/cm^3$(?)\")\n",
     "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
     "concentrations.mean(), concentrations.std()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5d9a92c3-3ab2-4114-b504-deaecf8bfcb3",
+   "cell_type": "markdown",
+   "id": "a121c23b-8796-4580-8820-8fa3d71c2231",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Notes for stabilizing concentration distribution within measurements of a single sample\n",
+    "- extract the largest peak from CONTIN and use that only"
+   ]
   }
  ],
  "metadata": {
