prevent matplotlib warning when showing many plots

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -346,6 +346,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.max_open_warning'] = 50\n",
     "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import area, integrate\n",
     "rayleighRatio = 1.35e-5 # in 1/cm at wavelength of 632.8 nm and 25 °C\n",
     "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
