use mean count rate from data files if no CR data was found (averaged files)
- option for providing monitorDiodeScale which is not included in averaged data files

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -46,7 +46,7 @@
     "import pandas as pd\n",
     "from analyse_dls_with_contin.dlshelpers import getDLSFileData\n",
     "    \n",
-    "def processDLSMeasurements(files, monitorDiodeRef=0):\n",
+    "def processDLSMeasurements(files, monitorDiodeRef=0, monitorDiodeScale=1):\n",
     "    \"\"\"Treat a set of files as measurement of the same sample,\n",
     "       at different scattering angles and with repetitions, possibly.\n",
     "       Returns count rate averages and std. deviations for each angle.\"\"\"\n",
@@ -55,15 +55,16 @@
     "    # gather all relevant data from files in a directory\n",
     "    dirData = [getDLSFileData(fn) for fn in files]\n",
     "    if not len(dirData):\n",
-    "        return\n",
+    "        return {}\n",
     "    #print(dirData)\n",
     "    # create a DataFrame from that\n",
-    "    df = pd.DataFrame({key: [fileData[key] for fileData in dirData]\n",
-    "                       for key in dirData[0].keys() if key not in (\"countrate\", \"angles\")})\n",
+    "    columns = set([key for fileData in dirData for key in fileData.keys()\n",
+    "                   if key not in (\"correlation\", \"countrate\", \"angles\", \"meancr\", \"sampleName\", \"filename\")])\n",
+    "    df = pd.DataFrame({key: [fileData.get(key, None) for fileData in dirData]\n",
+    "                       for key in columns})\n",
     "    name = '+'.join(list(set([Path(fn).parent.name for fn in files])))\n",
     "    summary = dict(name=name, timestamp=df.timestamp[0],\n",
     "                   concentration=df.concentration[0])\n",
-    "    monitorDiodeScale = 1\n",
     "    if \"monitorDiode\" in df.columns:\n",
     "        if monitorDiodeRef != 0:\n",
     "            monitorDiodeScale = monitorDiodeRef / df.monitorDiode.mean()\n",
@@ -77,20 +78,31 @@
     "               summary[colname] = df[colname].mean()\n",
     "    # all sets of angles found in files in this directory, a set can have unique entries only\n",
     "    dirAngles = set([tuple(fileData['angles']) for fileData in dirData])\n",
-    "    countRates = []\n",
+    "    countRates, countRateMeans = [], []\n",
     "    for angles in dirAngles:\n",
-    "        # concatenate countrates (time series) of the same angles only (for averaging over time later)\n",
-    "        countRates.append(pd.concat([fileData.get(\"countrate\", pd.DataFrame())\n",
+    "        # concatenate countrates (time series) of the same set of angles only\n",
+    "        # averaging count rates over time later\n",
+    "        countRates.append(pd.concat([fileData.get('countrate', pd.DataFrame())\n",
+    "                                     for fileData in dirData\n",
+    "                                     if tuple(fileData['angles']) == angles]))\n",
+    "        countRateMeans.append(pd.concat([fileData.get('meancr', pd.DataFrame())\n",
     "                                     for fileData in dirData\n",
     "                                     if tuple(fileData['angles']) == angles]))\n",
     "    # count rate mean over all measurements (must be at same angles!)\n",
-    "    countrate = pd.concat(countRates, axis=1)*monitorDiodeScale\n",
-    "    print(\"Measurement angles:\", sorted(countrate.columns.astype(int)))\n",
-    "    countrate.sort_index(axis=1, inplace=True)\n",
+    "    countRates = pd.concat(countRates, axis=1)*monitorDiodeScale\n",
+    "    countRateMeans = pd.concat(countRateMeans, axis=1)*monitorDiodeScale\n",
+    "    countRates.sort_index(axis=1, inplace=True)\n",
+    "    countRateMeans.sort_index(axis=1, inplace=True)\n",
     "    def seriesToDict(series, lbl):\n",
     "        return {\"{}{:.0f}\".format(lbl, key): value for key, value in zip(series.index, series.values)}\n",
-    "    summary.update(seriesToDict(countrate.mean(), 'crmean'))\n",
-    "    summary.update(seriesToDict(countrate.std(), 'crstd'))\n",
+    "    if not countRates.empty:\n",
+    "        summary.update(seriesToDict(countRates.mean(), 'crmean'))\n",
+    "        summary.update(seriesToDict(countRates.std(), 'crstd'))\n",
+    "    else:\n",
+    "        summary.update(seriesToDict(countRateMeans.mean(), 'crmean'))\n",
+    "        summary.update(seriesToDict(countRateMeans.std(), 'crstd'))\n",
+    "    summary.update(angles=countRateMeans.columns.astype(int).tolist())\n",
+    "    print(\"Measurement angles:\", summary['angles'])\n",
     "    return summary\n",
     "\n",
     "def crAtAngle(summaryDict, degrees):\n",
@@ -101,8 +113,7 @@
     "     return np.array([crAtAngle(summaryDict, theta)[0] for theta in getAngles(summaryDict)])\n",
     "\n",
     "def getAngles(summaryDict):\n",
-    "    prefix = 'crmean'\n",
-    "    return sorted([int(key[len(prefix):]) for key in summaryDict.keys() if key.startswith(prefix)])"
+    "    return summaryDict.get('angles', []) if summaryDict else []"
    ]
   },
   {
@@ -138,7 +149,7 @@
    "outputs": [],
    "source": [
     "bufferFiles = getDataFiles(pathBuffer, include=\"*.ASC\", exclude=\"_average\")\n",
-    "printFileList(bufferFiles)\n",
+    "printFileList(bufferFiles, numParts=10)\n",
     "bufferData = processDLSMeasurements(bufferFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "crBuf_mean = crMean(bufferData)\n",
     "bufferData, crBuf_mean"
@@ -325,7 +336,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from analyse_dls_with_contin.contin import runContinOverFiles, getContinResults\n",
+    "from analyse_dls_with_contin.contin import runContinOverFiles\n",
     "resultDirs = runContinOverFiles(particleFiles, continConfigs, nthreads=None)\n",
     "resultDirs"
    ]
@@ -349,6 +360,8 @@
     "import matplotlib\n",
     "matplotlib.rcParams['figure.max_open_warning'] = 50\n",
     "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import area, integrate\n",
+    "from analyse_dls_with_contin.contin import getContinResults\n",
+    "import numpy as np\n",
     "rayleighRatio = 1.35e-5 # in 1/cm at wavelength of 632.8 nm and 25 °C\n",
     "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
@@ -370,10 +383,11 @@
     "        plt.errorbar(dfDistrib.radius,\n",
     "                 dfDistrib.distrib * intensity, yerr=dfDistrib.err*intensity, ecolor='salmon')\n",
     "        plt.title(continResultDir.name)\n",
-    "        plt.xlim(plotRangeX)\n",
+    "        plt.xlim(plotRangeX); plt.xlim(0,1.5e-7)\n",
     "        plt.subplot(2,2,2); plt.grid()\n",
-    "        plt.plot(dfDistrib.radius.values, sigma_sca, label=\"Diff. scattering cross section (cm$^2$/sr)\")\n",
-    "        plt.xlim(plotRangeX); plt.ylim(0, 1e-11); plt.legend()\n",
+    "        plt.semilogy(dfDistrib.radius.values, sigma_sca, label=\"Diff. scattering cross section (cm$^2$/sr)\")\n",
+    "        plt.xlim(plotRangeX);\n",
+    "        plt.legend(); #plt.ylim(0, 1e-21)\n",
     "        plt.subplot(2,1,2); plt.grid()\n",
     "        plt.plot(dfDistrib.radius.values, concentrationDistrib,\n",
     "                 label=r\"concentration in $sr/cm^3$(?)=$\\int${:.3g}\".format(concentration));\n",
