note on refraction indices moved up

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -27,6 +27,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2ddfa087-ad51-43bb-b25b-91251ac11407",
+   "metadata": {},
+   "source": [
+    "Refractive Index of\n",
+    "- Polypropylene, PP: 1.492 (https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592)\n",
+    "- Polystyrene, PS: 1.593"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e82e7d8e-5baf-477e-a853-67b53075657b",
    "metadata": {},
    "source": [
@@ -177,10 +187,6 @@
     "## The differential scattering cross section using Mie theory\n",
     "\n",
     "See https://pymiescatt.readthedocs.io/en/latest/forward.html#functions-for-single-particles\n",
-    "\n",
-    "Refractive Index of\n",
-    "- Polypropylene, PP: 1.492 (https://www.osapublishing.org/ao/abstract.cfm?uri=ao-42-3-592)\n",
-    "- Polystyrene, PS: 1.593\n",
     "\n",
     "### Using [miepython](https://miepython.readthedocs.io/en/latest/index.html)\n",
     "\n",
