--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -172,9 +172,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")#, exclude=\"_average\")\n",
+    "if True: # use averaged files?\n",
+    "    particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
+    "    # Monitor diode reference: 1567735, this mon. diode:   21146, scale: 74.138438 (094 2021 PS-Standard 1zu1000)\n",
+    "    particleData = processDLSMeasurements(particleFiles, monitorDiodeScale=74.138438)\n",
+    "else:\n",
+    "    particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
+    "    particleData = processDLSMeasurements(particleFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "printFileList(particleFiles)\n",
-    "particleData = processDLSMeasurements(particleFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
     "crTot_mean = crMean(particleData)\n",
     "particleData, crTot_mean"
    ]
