plotting results sorted by angle
- gives better overview of CONTIN results within each angle

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -406,7 +406,7 @@
     "    return concentration, theta\n",
     "\n",
     "concentrations = np.array([getConcentration(dn, particleData, bufferData, tolueneData, plotRangeX=sizeRangeM, plot=True)\n",
-    "                           for dn in resultDirs])"
+    "                           for dn in sorted(resultDirs)])"
    ]
   },
   {
