fixed final concentration calc

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -427,7 +427,8 @@
     "plt.grid(); plt.ylim(0,1000)\n",
     "plt.ylabel(r\"Concentration in $1/cm^3$(?)\")\n",
     "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "concentrations.mean(), concentrations.std()"
+    "concentrations = concentrations[:,0]\n",
+    "concentrations.mean(), concentrations.std(), np.median(concentrations)"
    ]
   },
   {
