calculating and plotting number and mass concentration

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -22,7 +22,8 @@
     "pathToluene = \"20210511/092 2021 Toluol\"\n",
     "pathBuffer = \"20210511/093 2021 Wasser\"\n",
     "pathSample = \"20210511/094 2021 PS-Standard 1zu1000\"\n",
-    "refracParticle = 1.492"
+    "refracParticle = 1.492\n",
+    "densityParticle = 1.32*1e6 # g/m^3"
    ]
   },
   {
@@ -172,13 +173,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if True: # use averaged files?\n",
+    "if False: # use averaged files?\n",
     "    particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
     "    # Monitor diode reference: 1567735, this mon. diode:   21146, scale: 74.138438 (094 2021 PS-Standard 1zu1000)\n",
     "    particleData = processDLSMeasurements(particleFiles, monitorDiodeScale=74.138438)\n",
     "else:\n",
     "    particleFiles = getDataFiles(pathSample, include=\"*.ASC\", exclude=\"_average\")\n",
     "    particleData = processDLSMeasurements(particleFiles, monitorDiodeRef=tolueneData['monitorDiode'])\n",
+    "particleData['density'] = densityParticle\n",
     "printFileList(particleFiles)\n",
     "crTot_mean = crMean(particleData)\n",
     "particleData, crTot_mean"
@@ -337,7 +339,7 @@
    "source": [
     "angles = getAngles(particleData)\n",
     "continConfigs = [updatedDict(continConfig, 'angle', angle) for angle in getAngles(particleData)]\n",
-    "continConfigs"
+    "#continConfigs"
    ]
   },
   {
@@ -386,49 +388,60 @@
     "    nMedium = bufferData[\"Refractive Index\"]\n",
     "    sigma_sca = np.array([diffScatteringCrossSection(radius, theta, wavelen, nMedium)\n",
     "                          for radius in dfDistrib.radius.values*1e9]).flatten()\n",
-    "    concentrationDistrib = dfDistrib.distrib.values * intensity / sigma_sca\n",
-    "    concentration = integrate(dfDistrib.radius.values, concentrationDistrib)\n",
+    "    concentrationNumbers = dfDistrib.distrib.values * intensity / sigma_sca\n",
+    "    volumes = np.pi * dfDistrib.radius.values**3 * 4/3 # in Si units = meters\n",
+    "    concentrationMass = particleData['density'] * volumes * concentrationNumbers\n",
+    "    concentrationNumbersSum = integrate(dfDistrib.radius.values, concentrationNumbers)\n",
+    "    concentrationMassSum = integrate(dfDistrib.radius.values, concentrationMass)\n",
     "    if plot:\n",
     "        createFigure(300, 2, quiet=True, tight_layout = {'pad': 0.05});\n",
-    "        plt.subplot(2,2,1); plt.grid()\n",
+    "        plt.subplot(3,2,1); plt.grid()\n",
     "        plt.errorbar(dfDistrib.radius,\n",
     "                 dfDistrib.distrib * intensity, yerr=dfDistrib.err*intensity, ecolor='salmon')\n",
     "        plt.title(continResultDir.name)\n",
     "        plt.xlim(plotRangeX); plt.xlim(0,1.5e-7)\n",
-    "        plt.subplot(2,2,2); plt.grid()\n",
-    "        plt.semilogy(dfDistrib.radius.values, sigma_sca, label=\"Diff. scattering cross section (cm$^2$/sr)\")\n",
+    "        plt.subplot(3,2,2); plt.grid()\n",
+    "        plt.semilogy(dfDistrib.radius, sigma_sca)\n",
+    "        plt.title(\"Diff. scattering cross section (cm$^2$/sr)\")\n",
     "        plt.xlim(plotRangeX);\n",
-    "        plt.legend(); #plt.ylim(0, 1e-21)\n",
-    "        plt.subplot(2,1,2); plt.grid()\n",
-    "        plt.plot(dfDistrib.radius.values, concentrationDistrib,\n",
-    "                 label=r\"concentration in $sr/cm^3$(?)=$\\int${:.3g}\".format(concentration));\n",
-    "        plt.legend(); plt.xlim(plotRangeX);\n",
-    "    return concentration, theta\n",
+    "        plt.subplot(3,1,2); plt.grid()\n",
+    "        plt.plot(dfDistrib.radius, concentrationNumbers,\n",
+    "                 label=r\"1/mL=$\\int$\"+\"{:.3g}\".format(concentrationNumbersSum));\n",
+    "        plt.ylabel(\"Numbers / mL\")\n",
+    "        handles1, labels1 = plt.gca().get_legend_handles_labels()\n",
+    "        ax2 = plt.gca().twinx()\n",
+    "        ax2.plot(dfDistrib.radius, concentrationMass, color=\"green\",\n",
+    "                 label=r\"g/mL=$\\int$\"+\"{:.3g}\".format(concentrationMassSum));\n",
+    "        ax2.set_ylabel(\"g / mL\")\n",
+    "        handles2, labels2 = plt.gca().get_legend_handles_labels()\n",
+    "        plt.xlim(plotRangeX);\n",
+    "        plt.legend(handles1+handles2, labels1+labels2)\n",
+    "    return theta, concentrationNumbersSum, concentrationMassSum\n",
     "\n",
-    "concentrations = np.array([getConcentration(dn, particleData, bufferData, tolueneData, plotRangeX=sizeRangeM, plot=True)\n",
-    "                           for dn in sorted(resultDirs)])"
+    "concentrations = pd.DataFrame([getConcentration(dn, particleData, bufferData, tolueneData, plotRangeX=sizeRangeM, plot=True)\n",
+    "                               for dn in sorted(resultDirs)], columns=(\"angle\", \"cNumbers\", \"cMass\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8914d5da-380f-4de5-9918-d0e29d49a72f",
+   "id": "ec8534a8-a02f-4245-859e-14d0d7a18477",
    "metadata": {},
    "outputs": [],
    "source": [
     "createFigure(300, 3, quiet=True, tight_layout = {'pad': 0.05});\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.plot(concentrations[:,1], concentrations[:,0], '.')\n",
-    "plt.grid(); #plt.ylim(0,30e2)\n",
-    "plt.ylabel(r\"Concentration in $1/cm^3$(?)\")\n",
-    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "plt.subplot(1,2,2)\n",
-    "plt.plot(concentrations[:,1], concentrations[:,0], '.')\n",
-    "plt.grid(); plt.ylim(0,1000)\n",
-    "plt.ylabel(r\"Concentration in $1/cm^3$(?)\")\n",
-    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "concentrations = concentrations[:,0]\n",
-    "concentrations.mean(), concentrations.std(), np.median(concentrations)"
+    "ax = plt.subplot(1,2,1)\n",
+    "concentrations.plot('angle', 'cNumbers', marker='.', ax=ax, lw=0, grid=True,\n",
+    "                    label=f\"Number concentration, median: {np.median(concentrations.cNumbers):.1f}\");\n",
+    "ax.set_ylabel(r\"Concentration in 1 / mL\")\n",
+    "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
+    "plt.ylim(0,np.median(concentrations.cNumbers)*3);\n",
+    "ax = plt.subplot(1,2,2)\n",
+    "concentrations.plot('angle', 'cMass', marker='.', ax=ax, lw=0, grid=True, color='green',\n",
+    "                    label=f\"Mass concentration, median: {np.median(concentrations.cMass):.3g}\");\n",
+    "ax.set_ylabel(r\"Concentration in g / mL\")\n",
+    "ax.set_xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
+    "plt.ylim(0,np.median(concentrations.cMass)*2);"
    ]
   },
   {
