removed obsolete/unused mie scattering testing code

--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -173,7 +173,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if False: # use averaged files?\n",
+    "if True: # use averaged files?\n",
     "    particleFiles = getDataFiles(pathSample, include=\"*averaged.ASC\")\n",
     "    # Monitor diode reference: 1567735, this mon. diode:   21146, scale: 74.138438 (094 2021 PS-Standard 1zu1000)\n",
     "    particleData = processDLSMeasurements(particleFiles, monitorDiodeScale=74.138438)\n",
@@ -191,11 +191,7 @@
    "id": "daaa083e-b677-4621-bce1-a5e79b9f56d7",
    "metadata": {},
    "source": [
-    "## The differential scattering cross section using Mie theory\n",
-    "\n",
-    "See https://pymiescatt.readthedocs.io/en/latest/forward.html#functions-for-single-particles\n",
-    "\n",
-    "### Using [miepython](https://miepython.readthedocs.io/en/latest/index.html)\n",
+    "## The differential scattering cross section using [miepython](https://miepython.readthedocs.io/en/latest/index.html)\n",
     "\n",
     "See also https://miepython.readthedocs.io/en/latest/03_angular_scattering.html#Differential-Scattering-Cross-Section  \n",
     "cites [Wiscombe, W. J. (1979). Mie Scattering Calculations. doi:10.5065/D6ZP4414](https://opensky.ucar.edu/islandora/object/technotes:232)"
@@ -230,61 +226,6 @@
     "        print(wavelen, 2*radius, nMedium, refracParticle/nMedium, x, geometric_cross_section)\n",
     "    qext, qsca, qback, g = miepython.mie(m,x)\n",
     "    return geometric_cross_section * qext * miepython.i_unpolarized(m,x,mu)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8c8fefe-4e9d-43a2-81f7-2125688efdeb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Example for testing\n",
-    "import numpy as np\n",
-    "radius = 850.\n",
-    "wavelen = bufferData[\"Wavelength [nm]\"]\n",
-    "nMedium = bufferData[\"Refractive Index\"]\n",
-    "angles = getAngles(tolueneData)\n",
-    "# angles = np.linspace(0,180,1000)\n",
-    "sigma_sca = diffScatteringCrossSection(radius, angles, wavelen, nMedium, verbose=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e011ae39-4d8a-412b-878d-fe2db7c4dd31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plotting Mie scattering and count rates over the angles\n",
-    "import matplotlib.pyplot as plt\n",
-    "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
-    "createFigure(300, 2.2, quiet=True, tight_layout = {'pad': 0.05});\n",
-    "plt.subplot(2,3,1)\n",
-    "plt.plot(angles, sigma_sca, '.', color='blue')\n",
-    "plt.yscale('log'); plt.grid(True)\n",
-    "plt.title(f\"Radius={radius:.0f} nm, Refractive index m={refracParticle:.2f}, $\\lambda$={wavelen:.1f} nm\")\n",
-    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "plt.ylabel(\"Diff. Scattering Cross Section (cm$^2$/sr)\");\n",
-    "\n",
-    "plt.subplot(2,3,2)\n",
-    "plt.plot(angles, sigma_sca*crTol_mean, '.', color='blue')\n",
-    "plt.yscale('log'); plt.grid(True)\n",
-    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "plt.ylabel(\"Diff. Scattering Cross Section (cm$^2$/sr)$\\;\\cdot\\; I_{tol}$\");\n",
-    "\n",
-    "plt.subplot(2,3,3)\n",
-    "plt.plot(angles, crTol_mean, '.', color='blue')\n",
-    "plt.yscale('log'); plt.grid(True)\n",
-    "plt.title(\"$I_{tol}$, Intensity of Toluene\")\n",
-    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");\n",
-    "\n",
-    "plt.subplot(2,3,4)\n",
-    "rayleighRatio = 1.35e-5 # in 1/cm at wavelength of 632.8 nm and 25 °C\n",
-    "plt.plot(angles, (crTot_mean - crBuf_mean) * rayleighRatio, '.', color='blue')\n",
-    "plt.yscale('log'); plt.grid(True)\n",
-    "plt.ylabel(r\"$(I_{tot}-I_{dis}) R_{Tol}$\")\n",
-    "plt.xlabel(r\"Scattering Angle $\\Theta$ (degrees)\");"
    ]
   },
   {
@@ -371,7 +312,9 @@
    "outputs": [],
    "source": [
     "import matplotlib\n",
+    "import matplotlib.pyplot as plt\n",
     "matplotlib.rcParams['figure.max_open_warning'] = 50\n",
+    "from analyse_dls_with_contin.jupyter_analysis_tools.plotting import createFigure\n",
     "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import area, integrate\n",
     "from analyse_dls_with_contin.contin import getContinResults\n",
     "import numpy as np\n",
