--- a/Concentration from DLS.ipynb
+++ b/Concentration from DLS.ipynb
@@ -221,7 +221,8 @@
     "    if not isList(angles):\n",
     "        angles = np.array([angles])\n",
     "    mu = np.cos(np.radians(angles))\n",
-    "    m, x = refracParticle/nMedium, np.pi*2*radius/(wavelen/nMedium)\n",
+    "    m = refracParticle/nMedium\n",
+    "    x = np.pi*2*radius/(wavelen/nMedium)\n",
     "    if verbose:\n",
     "        print(wavelen, 2*radius, nMedium, refracParticle/nMedium, x, geometric_cross_section)\n",
     "    qext, qsca, qback, g = miepython.mie(m,x)\n",
@@ -233,7 +234,7 @@
    "id": "bed14505-e854-4ad3-a626-f6efa25ffe75",
    "metadata": {},
    "source": [
-    "## Get the intensity distribution\n",
+    "## Get the size distribution\n",
     "\n",
     "**According to Malvern:**  \n",
     "*\"The first order result from a DLS experiment is an intensity distribution of particle sizes. The intensity distribution is naturally weighted according to the scattering intensity of each particle fraction or family. For biological materials or polymers the particle scattering intensity is proportional to the square of the molecular weight.\"*  \n",
@@ -307,6 +308,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "22f0d3ce-924a-42ff-bd50-1e079bf8b09e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rayleighRatioToluene = 1.35e-5*1e2 # in 1/m at wavelength of 632.8 nm and 25 °C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9318f88b-1f20-459b-bd6f-b98dddf94f02",
    "metadata": {},
    "outputs": [],
@@ -318,7 +329,6 @@
     "from analyse_dls_with_contin.jupyter_analysis_tools.distrib import area, integrate\n",
     "from analyse_dls_with_contin.contin import getContinResults\n",
     "import numpy as np\n",
-    "rayleighRatio = 1.35e-5 # in 1/cm at wavelength of 632.8 nm and 25 °C\n",
     "def getConcentration(continResultDir, particleData, bufferData, tolueneData, plotRangeX=None, plot=False):\n",
     "    \"\"\"Implements [equation 8 in Austin 2020](https://link.springer.com/content/pdf/10.1007/s11051-020-04840-8.pdf).\"\"\"\n",
     "    dfDistrib, dfFit, varmap = getContinResults(continResultDir)\n",
@@ -326,7 +336,7 @@
     "    I_tot, _ = crAtAngle(particleData, theta)\n",
     "    I_dis, _ = crAtAngle(bufferData, theta)\n",
     "    I_tol, _ = crAtAngle(tolueneData, theta)\n",
-    "    intensity = (I_tot - I_dis) * rayleighRatio / (I_tol)\n",
+    "    intensity = (I_tot - I_dis) * rayleighRatioToluene / (I_tol)\n",
     "    wavelen = bufferData[\"Wavelength [nm]\"]\n",
     "    nMedium = bufferData[\"Refractive Index\"]\n",
     "    sigma_sca = np.array([diffScatteringCrossSection(radius, theta, wavelen, nMedium)\n",
